# todo-app

./: .gitignore  CMakeLists.txt  README.md
src/core/database/: TodoDatabase.cpp  TodoDatabase.h
src/core/models/: Todo.cpp  Todo.h
src/gui/: AddTodoDialog.cpp  AddTodoDialog.h  EditTodoDialog.cpp  EditTodoDialog.h  MainWindow.cpp  MainWindow.h  main.cpp
